cabal-version:      2.4
name:               metric-trees
version:            0.1.0.0
-- synopsis:
-- description:
bug-reports: http://www.github.com/ssbothwell/metric-trees
-- license:
author:             Solomon Bothwell and Reed Mullanix
maintainer:         ssbothwell@gmail.com
category:          Data Structures
extra-source-files: CHANGELOG.md

library
  build-depends:      base ^>=4.14.3.0
                    , containers
  exposed-modules:    Data.BKTree
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010